--- a/src/app/Login/to-do-login/to-do-login.component.html
+++ b/src/app/Login/to-do-login/to-do-login.component.html
@@ -1,8 +1,14 @@
 <h3>Sign in by entering email and password</h3>
-<form [formGroup]="form" (submit)="toFormPage(form)" novalidate>
+<div *ngIf="success" class="alert alert-success mt-3" role="alert">
+	{{success}}
+</div>
+<div *ngIf="error" class="alert alert-danger mt-3" role="alert">
+	{{error}}
+</div>
+<form [formGroup]="form" (submit)="loadUser(form)" novalidate>
 	<div class="form-group mt-4">
 		<label for="email">Email:</label>
-		<input type="text" formControlName="email" class="form-control" id="email" placeholder="Email" required>
+		<input type="email" formControlName="email" class="form-control" id="email" placeholder="Email" required>
 		<span *ngIf="email.errors?.emailInvalid && (email.dirty || email.touched)" style="color: red" class="ml-3">Invalid email!</span>
 	</div>
 	<div class="form-group">
@@ -10,7 +16,7 @@
 		<input type="password" formControlName="password" class="form-control" id="password" placeholder="Password" required>
 		<span *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red" class="ml-3">{{getErrorMsg(password)}}</span>
 	</div>
-	<button type="submit" class="btn btn-success mb-3">Sign in</button>
+	<button type="submit" class="btn btn-success mb-3" [disabled]="form.invalid">Sign in</button>
 	<p>If you don't have account, sign up by clicking the button below.</p>
 	<button type="button" class="btn btn-primary" routerLink="/signup">Sign up</button>
-</form>
+</form> 
