--- a/src/app/Signup/to-do-signup/to-do-signup.component.html
+++ b/src/app/Signup/to-do-signup/to-do-signup.component.html
@@ -1,5 +1,5 @@
-<h3>Sign up for ToDo App!</h3>
-<form [formGroup]="form" (submit)="toLoginPage(form)" novalidate>
+<h3>Sign up for ToDo App!</h3> 
+<form [formGroup]="form" (submit)="addUser(form)" novalidate>
 	<div class="form-group mt-4">
 		<label for="username">User Name:</label>
 		<input type="text" formControlName="username" class="form-control" id="username" placeholder="Add username" aria-describedby="nameHelp" required>
@@ -14,14 +14,49 @@
 	</div>
 	<div class="form-group">
 		<label for="password">Password:</label>
-		<input type="password" formControlName="password" class="form-control" id="password" placeholder="Add password" aria-describedby="passHelp" required>
+		<input [type]="(showPass) ? 'text' : 'password'" formControlName="password" class="form-control" id="password" placeholder="Add password" aria-describedby="passHelp" required>
+		<div class="input-group-append">
+		<button type="button" id="button-pass" class="btn btn-sm btn-outline-secondary" (click)="showPass = !showPass">
+			<svg *ngIf="!showPass; else show" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            	<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
+            	<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
+			</svg>
+			<ng-template #show>
+			<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-slash-fill" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            	<path d="M10.79 12.912l-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z" />
+            	<path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708l-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829z" />
+            	<path fill-rule="evenodd" d="M13.646 14.354l-12-12 .708-.708 12 12-.708.708z" />
+			</svg>
+			</ng-template>
+		</button>
+		</div>
 		<span *ngIf="password.invalid && (password.dirty || password.touched)" style="color: red" class="ml-3">{{getErrorMsg(password)}}</span>
 		<small id="passHelp" class="form-text text-muted">We'll never share your passwords with anyone else.</small>
 	</div>
 	<div class="form-group">
 		<label for="confirmPassword">Confirm Password:</label>
-		<input type="password" formControlName="confirmPassword" class="form-control" id="confirmPassword" placeholder="Confirm password" required>
+		<input [type]="(showConfirm) ? 'text' : 'password'" formControlName="confirmPassword" class="form-control" id="confirmPassword" placeholder="Confirm password" required>
+		<div class="input-group-append">
+		<button type="button" id="button-confirm" class="btn btn-sm btn-outline-secondary" (click)="showConfirm = !showConfirm">
+			<svg *ngIf="!showConfirm; else showC" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-fill" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            	<path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z" />
+            	<path fill-rule="evenodd" d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
+			</svg>
+			<ng-template #showC>
+			<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-eye-slash-fill" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
+            	<path d="M10.79 12.912l-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z" />
+            	<path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708l-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829z" />
+            	<path fill-rule="evenodd" d="M13.646 14.354l-12-12 .708-.708 12 12-.708.708z" />
+			</svg>
+			</ng-template>
+		</button>
+		</div>
 		<span *ngIf="form.errors?.notequal" style="color: red" class="ml-3">Password do not match!</span>
 	</div>
-	<button type="submit" class="btn btn-success">Submit</button>
+	<button type="submit" class="btn btn-success mr-2" [disabled]="form.invalid">Submit</button>
+	<button type="button" class="btn btn-secondary" routerLink="/login">Back to login</button>
 </form>
