--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--Toolbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="navbar-brand">
     <img
@@ -23,7 +24,7 @@
 </nav>
 
 <div class="content" role="main">
-  <router-outlet></router-outlet>
-  <!--app-to-do-form></app-to-do-form>
-  <app-to-do-container></app-to-do-container-->
+  <div class="container mt-4">
+    <router-outlet></router-outlet>
+  </div>
 </div>
